<resources>
    <string name="app_name">UnicornGO</string>
    <string name="title_land">Land</string>
    <string name="title_unicorns">Unicorns</string>
    <string name="title_market">Market</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_all">All</string>
    <string name="title_buy">Buy</string>
    <string name="title_sire">Sire</string>
    <string name="title_free">Free</string>

    <string name="title_recive">Recive</string>
    <string name="title_send">Send</string>

    <string name="menu_templates">templates</string>
    <string name="menu_qrcode">scan qrcode</string>

    <string name="menu_unicorns_buy_eth">Buy gen0 with ether</string>
    <string name="menu_unicorns_buy_candy">Buy gen0 with candy</string>
    <string name="title_set_name">Set name for unicorn</string>
    <string name="btn_close">Close</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_revoke">Revoke</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>


    <string name="title_strength">Strength</string>
    <string name="title_agility">Agility</string>
    <string name="title_speed">Speed</string>
    <string name="title_intellect">Intellect</string>
    <string name="title_charisma">Charisma</string>
    <string name="btn_confirm_transtaction">Confirm transaction</string>
    <string name="set_price">Set price</string>
    <string name="enter_price_in_ether">Enter price in ether</string>
    <string name="enter_price_in_candy">Enter price in candy</string>
    <string name="click_for_revoke">(revoke?)</string>
    <string name="click_for_buy">(buy)</string>
    <string name="click_for_sire">(sire)</string>
    <string name="dialog_confirm_revoke">Revoke unicorn?</string>
    <string name="dialog_confirm_revoke_pair">Revoke pair unicorn?</string>
    <string name="dialog_revoke_unicorn">Confirm for revoke</string>
    <string name="transactions">Transactions</string>
    <string name="title_your_address">Your address</string>
    <string name="title_qrcode">Your QR code</string>
    <string name="title_address_recepient">Address recepient</string>
    <string name="title_amount">Amount</string>
    <string name="hint_input_address_recepient">input address recepient 0x00..</string>
    <string name="hint_input_amount">input amount coin</string>
    <string name="title_name_template">Name template</string>
    <string name="hint_input_name_template">input name template</string>

    <string name="danger_address_recepient_isempty">Address recepient is empty!</string>
    <string name="danger_wrong_address_ethereum_wallet">Wrong ethereum address recepient!</string>
    <string name="danger_not_enough_money">Not enough money</string>


    <string name="dlg_buying_unicorn">buying unicorn...</string>
    <string name="dlg_generate_acc">generate ethereum account...</string>
    <string name="title_recovery">Recovery account</string>
    <string name="dlg_recovery_account">recovery account...</string>
    <string name="title_create_acc">Create account</string>
    <string name="title_recovery_account">Recovery</string>
    <string name="title_welcome">Welcome!</string>
    <string name="title_loading_wallet">Loading wallet</string>
    <string name="dlg_loading_your_unicorns">loading your unicorns...</string>
    <string name="dlg_load_market">load adverts</string>
    <string name="menu_filter">filter</string>
    <string name="title_market_filter">Filter</string>
    <string name="menu_buy_candy">Buy candy</string>
    <string name="dlg_send_transaction">sending ethereum...</string>
    <string name="danger_amount_empty">Amount is empty!</string>
    <string name="danger_not_valid_eth_address">Not valid ethereum address</string>
    <string name="danger_not_enough">Not enough ethereum!</string>
    <string name="title_or">OR</string>
    <string name="title_wallet_password">WALLET PASSWORD</string>
    <string name="hint_private_key">private key</string>
    <string name="title_choose_file">CHOOSE KEY FILE</string>
    <string name="title_try_recovery">TRY RECOVERY</string>
    <string name="danger_fail_recovery_input">Choose your keyfile or private key</string>
    <string name="empty_list">empty list\n(update)</string>
    <string name="menu_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="title_gas_price">Gas price (GWEI)</string>
    <string name="title_gas_limit">Gas limit (UNITS)</string>
    <string name="title_txspeed_slow">Slow</string>
    <string name="title_txspeed_standart">Standart</string>
    <string name="title_txspeed_fast">Fast</string>
    <string name="title_txspeed_very_fast">Very Fast</string>
    <string name="hint_wei">wei</string>
    <string name="title_setting_use_multiwallet">use multiwallet</string>
    <string name="title_setting_your_current_wallet">your current wallet</string>
    <string name="title_add_wallet">add wallet</string>
    <string name="title_export_key_file">export key-file</string>
    <string name="title_show_private_key">show private key</string>
    <string name="title_setting_use_4_pin_code_for_app">use 4 pin code for app</string>
    <string name="title_error_retry">Retry</string>
    <string name="title_error_fail_connect_to_node">Fail connect to node</string>
    <string name="title_error_lets_try">let\'s try...</string>
    <string name="menu_update_transactions">update</string>
    <string name="title_transactions">Transactions</string>
    <string name="dlg_reading_transactions">reading transactions...</string>
    <string name="title_language">language</string>
    <string name="title_choose_language">choose language</string>
    <string name="dlg_update_transactions">update transactions...</string>
    <string name="title_completed">completed!</string>
    <string name="title_show">show</string>
    <string name="menu_filter_all">all</string>
    <string name="menu_filter_for_sale">for sale</string>
    <string name="menu_filter_for_siring">for siring</string>
    <string name="menu_filter_free">free</string>
    <string name="title_not_set">not set!</string>
    <string name="title_not_sire">not sire</string>
    <string name="title_not_sell">not sell</string>
    <string name="title_filter_popular">Popular</string>
    <string name="title_filter_topforsale">Top for sale</string>
    <string name="title_filter_topforsire">Top for sire</string>
    <string name="title_filter_newest">Newest</string>

    <string name="title_swift">Swift</string>
    <string name="title_quick">Quick</string>
    <string name="title_rapid">Rapid</string>
    <string name="title_fast">Fast</string>
    <string name="title_slow">Slow</string>
    <string name="title_lazy">Lazy</string>
    <string name="title_hindered">Hindered</string>
    <string name="title_lethargic">Lethargic</string>
    <string name="title_recharge">RECHARGE</string>
    <string name="title_fertility">FERTILITY</string>
    <string name="title_not_selected">not selected</string>

    <string name="title_gen0">GEN0</string>
    <string name="title_error_auth">Error authentication</string>
    <string name="menu_reset">reset</string>

    <string name="dlg_updating">updating...</string>
    <string name="title_parents">PARENTS</string>
    <string name="dlg_update_info">update information...</string>
    <string name="confirm">confirm</string>
    <string name="hint_new_name">new name</string>
    <string name="error_empty_name">input new name</string>
    <string name="hind_only_one_change">Only one name change!</string>
    <string name="dlg_new_name_">new name</string>
    <string name="dlg_error_set_newname">Set new name error!</string>

    //12.06
    <string name="title_choose_unicorn_forpair">Select unicorn for pairing</string>
    <string name="error_fail_connection">Fail connection</string>
    <string name="title_commis_calc">commission calculation...</string>
    <string name="dlg_cost_pairing">cost of pairing</string>
    <string name="dlg_buy_unicorn">buy a unicorn?</string>
    <string name="title_cost">cost</string>
    <string name="dlg_set_password">Set password</string>
    <string name="hint_input_password_eth_wallet">input your password for ethereum wallet</string>
    <string name="title_user_information">User information</string>
    <string name="title_unfreeze">Unfreeze</string>
    <string name="title_enter_hours_to_reduce_freezing">Enter number of hours to reduce freezing time</string>
    <string name="title_unicorn_frozen">Your unicorn is frozen for:</string>
    <string name="title_hours">hours</string>
    <string name="title_will_pay">You will pay:</string>
    <string name="dlg_buy_unicorn_gen0">buy a unicorn gen0?</string>
    <string name="menu_buy_unicorn_gen0">Buy GEN-0</string>
    <string name="title_frozeen">Frozeen:\n</string>
    <string name="title_sell">Sell</string>
    <string name="title_Retry">Retry</string>
    <string name="error_loading_transactions">error loading transactions</string>
    <string name="title_about_me">about me</string>
    <string name="dlg_save_changes">save changes?</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_facebook">Facebook</string>
    <string name="hint_twitter">Twitter</string>
    <string name="hint_googleplus">Google Plus</string>
    <string name="hint_pinterest">Pinterest</string>
    <string name="hint_instagram">Instagram</string>
    <string name="toast_app_language_changed">Application language changed!</string>
    <string name="title_save_template">Save template</string>
    <string name="btn_copy">Copy</string>
    <string name="title_templates">Templates</string>
    <string name="toast_key_file_saved">Key file saved in </string>
    <string name="title_save_key_file">Save your key-file for next recovery ethereum wallet?</string>
    <string name="toast_permission_denied">Permission Denied</string>
    <string name="title_on_device">On device</string>
    //15.06
    <string name="dlg_app_will_be_restarted">application will be restarted</string>
    <string name="dlg_update_wallet">update wallet address and credentials?</string>
    <string name="menu_share">share</string>
    <string name="dlg_share_unicorn">share a unicorn</string>
    <string name="title_filter_my_only">My only</string>
    <string name="title_authorization">Authorization...</string>
    <string name="title_connect_to_blockchain">Connect to blockchain network...</string>
    <string name="title_initialization">Initialization...</string>
    <string name="menu_wallet">Wallet</string>
    <string name="title_operation_completed">Operation completed</string>
    <string name="title_unknow_operation">unknow operation</string>
    <string name="title_unicorn">unicorn</string>
    <string name="title_operation_error">operation error</string>
    <string name="title_unicorn_on_sell">listed on marketplace</string>
    <string name="title_unicorn_on_siring">now available for siring</string>
    <string name="title_unicorn_off_sell">withdrawn from marketplace</string>
    <string name="title_unicorn_off_siring">siring permission withdrawn</string>
    <string name="title_unicorn_set_name">set name</string>
    <string name="title_unicorn_will_be_born">soon your unicorn will be born</string>
    <string name="title_transaction_error">transaction error</string>
    <string name="title_transaction_fail">transaction fail</string>
</resources>
