<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
        <!--android:id="@+id/refresh"-->
        <!--android:icon="@mipmap/ic_refresh"-->
        <!--android:orderInCategory="1"-->
        <!--android:title="@string/menu_update_transactions"-->
        <!--app:showAsAction="ifRoom"/>-->

    <group
        android:id="@+id/group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/all"
            android:orderInCategory="1"
            android:title="@string/menu_filter_all"
            app:showAsAction="never"
            android:checked="true"/>
        <item
            android:id="@+id/forSale"
            android:orderInCategory="2"
            android:title="@string/menu_filter_for_sale"
            app:showAsAction="never" />
        <item
            android:id="@+id/forSiring"
            android:orderInCategory="3"
            android:title="@string/menu_filter_for_siring"
            app:showAsAction="never" />
        <item
            android:id="@+id/free"
            android:orderInCategory="4"
            android:title="@string/menu_filter_free"
            app:showAsAction="never" />
    </group>
    <!--<item android:id="@+id/unicorns_filter"-->
    <!--android:title="@string/menu_filter"-->
    <!--android:orderInCategory="1"-->
    <!--app:showAsAction="ifRoom"-->
    <!--android:icon="@mipmap/ic_filter_list_white_24dp"/>-->
</menu>