<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="3dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/info_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card:cardElevation="4dp"
        card:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="30">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_marginTop="3dp"
                    android:textAlignment="center"
                    android:textSize="9pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLiked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="26"
                    android:layout_marginTop="3dp"
                    android:drawableRight="@mipmap/ic_heart_outline_black_18dp"
                    android:textAlignment="center"
                    android:textSize="9pt"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_str"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="str 2"
                        android:textSize="5pt"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_agi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="agi 2"
                        android:textSize="5pt"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_spe"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="spe 2"
                        android:textSize="5pt"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_int"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="int 2"
                        android:textSize="5pt"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_cha"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="cha 2"
                        android:textSize="5pt"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <android.support.design.widget.CoordinatorLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_item"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="left"
                            android:layout_marginRight="0dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/empty_gallery"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/tvEnergy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:drawableLeft="@mipmap/ic_battery_charging"
                            android:gravity="center_vertical"
                            android:textSize="9pt" />

                        <TextView
                            android:id="@+id/tvReproduction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="5dp"
                            android:drawableLeft="@mipmap/ic_gender_male_female"
                            android:gravity="center_vertical"
                            android:textSize="9pt" />
                    </android.support.design.widget.CoordinatorLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llSell1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="2dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title_cost"
                                android:textAlignment="center" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvCandyCost"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="0 candy"
                                    android:textAlignment="center" />

                                <TextView
                                    android:id="@+id/tvCost"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="0 eth"
                                    android:textAlignment="center" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/click_for_buy"
                                android:textAlignment="center" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llSell2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <Button
                            android:id="@+id/btnSire"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:background="@drawable/btn"
                            android:text="@string/title_sire"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llSell4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <ProgressBar
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llSire1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:visibility="visible"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="2dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dlg_cost_pairing"
                                android:textAlignment="center" />


                            <TextView
                                android:id="@+id/tvBreedingCost"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textAlignment="center" />


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/click_for_sire"
                                android:textAlignment="center" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llSire2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <Button
                            android:id="@+id/btnSell"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:background="@drawable/btn"
                            android:text="@string/title_buy"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llSire3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvFrozenTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title_frozeen"
                                android:textAlignment="center" />


                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:gravity="center_horizontal"
                                android:src="@mipmap/ic_timer" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llSire4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <ProgressBar
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="#e6e6e6"-->
            <!--android:orientation="horizontal"-->
            <!--android:padding="10dp"-->
            <!--android:weightSum="10">-->

            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.5"-->
            <!--android:src="@mipmap/ic_calendar_range_black_18dp" />-->

            <!--<TextView-->
            <!--android:id="@+id/tv_created"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="left"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_weight="8.5"-->
            <!--android:gravity="left"-->
            <!--android:textSize="5pt"-->
            <!--android:textStyle="bold" />-->

            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.5"-->
            <!--android:src="@mipmap/ic_eye_black_24dp" />-->

            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.5"-->
            <!--android:src="@mipmap/ic_heart_black_18dp" />-->
            <!--</LinearLayout>-->

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>
